Update ECC dependencies and enhance document handling in various classes